--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -42,25 +42,44 @@
                         <span class="pl-3"><b>UF: </b>{{ informacoesCadastroConsulta.paciente.endereco.uf }}</span>
                     </div>
                 </div>
+            </div>
 
-                <div class="mt-2">
-                    <div><b>Motivo da consulta: </b>{{ informacoesCadastroConsulta.motivoConsulta }}</div>
-                </div>
+            <div class="mt-2">
+                <b>Motivo da consulta: </b>{{ informacoesCadastroConsulta.motivoConsulta }}
             </div>
         </p-fieldset>
     </div>
 
     <div class="mt-3">
-        <p-fieldset [toggleable]="true">
-            <p-header>
-                Registro de dieta habitual
-            </p-header>
+        <app-registro-dieta [cadastrarRegistroDieta]="true" [tipoRegistro]="'Registro de dieta habitual'"
+            [tiposDeRefeicoesParaCadastro]="informacoesCadastroConsulta.tiposDeRefeicoesParaCadastroRegistroDieta"
+            (formularioRegistroDieta)="salvarFormularioRegistroDietaHabitual($event)">
+        </app-registro-dieta>
 
-            <app-registro-dieta [cadastrarRegistroDieta]="true"
-                [tiposDeRefeicoesParaCadastro]="informacoesCadastroConsulta.tiposDeRefeicoesParaCadastroRegistroDieta"
-                (formularioRegistroDieta)="salvarFormularioRegistroDietaHabitual($event)">
-            </app-registro-dieta>
-        </p-fieldset>
+        <div class="mt-3">
+            <app-avaliacao-consumo-habitual [cadastrarAvaliacaoConsumoHabitual]="true"
+                (formularioAvaliacaoConsumoHabitual)="salvarFormularioAvaliacaoConsumoHabitual($event)">
+            </app-avaliacao-consumo-habitual>
+        </div>
+
+        <div class="mt-3">
+            <app-avaliacao-composicao-corporal [cadastrarAvaliacaoComposicaoCorporal]="true" 
+                [sexoPaciente]="informacoesCadastroConsulta.paciente.sexo"
+                (formularioAvaliacaoComposicaoCorporal)="salvarFormularioAvaliacaoComposicaoCorporal($event)">
+            </app-avaliacao-composicao-corporal>
+        </div>
+
+        <div class="mt-3">
+            <app-avaliacao-massa-muscular-corporea [cadastrarAvaliacaoMassaMuscularCorporea]="true"
+                (formularioAvaliacaoMassaMuscularCorporea)="salvarFormularioAvaliacaoMassaMuscularCorporea($event)">
+            </app-avaliacao-massa-muscular-corporea>
+        </div>
+
+        <div class="mt-3">
+            <app-conduta-nutricional [cadastrarCondutaNutricional]="true"
+                (formularioCondutaNutricional)="salvarFormularioCondutaNutricional($event)">
+            </app-conduta-nutricional>
+        </div>
     </div>
 </div>
 
